@@ -1,5 +1,13 @@
 2013-03-08  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
+	* dejagnu/baseboards/arc-linux-generic.exp: Set up to read a
+	command file on GDB startup.
+	* dejagnu/telnet-extra.exp (telnet_failure_check): Better error
+	message.
+	* run-uclibc-tests.sh: Create a command file to set sysroot.
+
+2013-03-08  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
 	* build-linux.sh: Turn off ARC_MMU_SASID and ARC_CMN_MMAP by default.
 
 2013-02-27  Jeremy Bennett <jeremy.bennett@embecosm.com>
